@@ -1,3 +1,7 @@
+2011-07-05 Harri Pitkänen <hatapitk@iki.fi>
+	* Fix hyphenation pattern for unknown words ending with hyphen.
+	* Fix Python interface to work with Python 3.2.
+
 2011-06-20 Harri Pitkänen <hatapitk@iki.fi>
 	* Grammar checker: suggest replacing "yhdes" with "ensimmäinen"
 
